--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -10,6 +10,10 @@ html, body{
 	background:white;
 }
 
+body {
+    font: 15px/22.5px "Helvetica Neue",HelveticaNeue,Helvetica,Arial,sans-serif;
+}
+
 a{
 	text-decoration:none;
 	outline:none;
