Lots of work in card lists and filters.  Also added ability to set abbreviation on Expansion Sets when you create them.  Guy add about 20 cards to test things out, and overall things work.  But there are some bugs around your search filter being saved during some navigation actions, as well as the creation of creature with no subtype when the subtype does not yet exist.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -37,6 +37,9 @@ p{
   margin: 20px;
 }
 
+ul {
+  margin-left: 30px;
+}
 .content{
 }
 
@@ -85,10 +88,10 @@ div.card_info_line {
   display:block;
   height: 26px;
 }
-span.card_info_title {
+div.card_info_title {
   float: left;
   width: 180px;
   font-weight: bold;
 }
-span.card_info_value {
+div.card_info_value {
 }
